--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,9 +16,15 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  <!-- 
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
     <url-pattern>*.html</url-pattern>
+  </servlet-mapping>
+  --> 
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
   <!-- 
   <welcome-file-list>
