Added Entities for Address and City and support for Campaigns to run in particular cities.

--- a/src/main/resources/entities.properties
+++ b/src/main/resources/entities.properties
@@ -1,3 +1,5 @@
 001=com.groupdealclone.domain.Deal
 002=com.groupdealclone.domain.Company
-003=com.groupdealclone.domain.Campaign
+003=com.groupdealclone.domain.CompanyAddress
+004=com.groupdealclone.domain.Campaign
+005=com.groupdealclone.domain.City
