JPA working and campaign now reading and writing to the DB

--- a/src/main/resources/hiberbate-context.properties
+++ b/src/main/resources/hiberbate-context.properties
@@ -3,6 +3,8 @@ app.jdbc.driverClassName=com.mysql.jdbc.Driver
 app.jdbc.url=jdbc:mysql://localhost:3306/groupdealclone
 app.jdbc.username=root
 app.jdbc.password=lqsym
- 
+app.jdbc.hbm2ddl.auto=validate
+app.jdbc.show.sql=true
+app.jdbc.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #hibernate properties
 hibernate.config=/WEB-INF/classes/hibernate.cfg.xml
