Work on file upload when starting a new campaign

--- a/src/main/resources/hiberbate-context.properties
+++ b/src/main/resources/hiberbate-context.properties
@@ -3,6 +3,6 @@ app.jdbc.driverClassName=com.mysql.jdbc.Driver
 app.jdbc.url=jdbc:mysql://localhost:3306/groupdealclone
 app.jdbc.username=root
 app.jdbc.password=lqsym
-app.jdbc.hbm2ddl.auto=update
+app.jdbc.hbm2ddl.auto=create-drop
 app.jdbc.show.sql=true
 app.jdbc.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
