Implemented "forgot password" functionality and integration email service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 min.password.size=8
+
+password.reset.message=Dear {0},\nYour password change request was received and your password has been changed to: {1}\nPlease visit group-deal-clone.com to login.
