--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 min.password.size=8
 
 password.reset.message=Dear {0},\nYour password change request was received and your password has been changed to: {1}\nPlease visit group-deal-clone.com to login.
+new.account.message=Dear {0},\nThank you for signing up for a Group Deal account.\nPlease click on the link below to confirm you account. Your account details are\nEmail Address: {1}\n Password: {2}\n\nConfirm Account: http://localhost:8080/Group-Deal-Clone/user/confirm?activate={3}
