--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#comment
 application.name=Group Deal
 email.smtp.username=no-reply@group-deal-clone.com
 email.smtp.password=abcd1234
@@ -13,3 +14,13 @@ min.password.size=8
 password.reset.message=Dear {0},\nYour password change request was received and your password has been changed to: {1}\nPlease visit group-deal-clone.com to login.
 
 new.account.message=Dear {0},\nThank you for signing up for a Group Deal account.\nPlease click on the link below to confirm you account. Your account details are\nEmail Address: {1}\nPassword: {2}\n\nConfirm Account: http://localhost:8080/Group-Deal-Clone/user/confirm?activate={3}
+
+
+# database properties
+app.jdbc.driverClassName=com.mysql.jdbc.Driver
+app.jdbc.url=jdbc:mysql://localhost:3306/groupdealclone
+app.jdbc.username=root
+app.jdbc.password=lqsym
+app.jdbc.hbm2ddl.auto=update
+app.jdbc.show.sql=true
+app.jdbc.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
