using JavaConfig to get minPasswordLength property.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-#comment
+#Configurations
+minPasswordSize=8
+
+#Application configurations (the ones that won't be used outside of spring beans)
 application.name=Group Deal
 email.smtp.username=no-reply@group-deal-clone.com
 email.smtp.password=abcd1234
@@ -9,7 +12,7 @@ email.smtp.starttls.enable=true
 
 no.reply.email=no-reply@group-deal-clone.com
 
-min.password.size=8
+
 
 password.reset.message=Dear {0},\nYour password change request was received and your password has been changed to: {1}\nPlease visit group-deal-clone.com to login.
 
