--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,12 @@
 			<artifactId>openid4java</artifactId>
 			<version>0.9.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
 
 		<!-- javamail -->
 		<dependency>
